--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,11 @@
 name = "theblownfuse"
 type = "javascript"
+main="index.js"
+compatibility_date="2023-05-05"
+[
+site
+]
+bucket = "./public"
 
 account_id = ""
 workers_dev = true
